<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBFE"
    tools:context=".UserProfileActivity">

    <Button
        android:id="@+id/seeVehiclesButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/mint_green"
        android:onClick="seeVehicles"
        android:text="@string/see_available_vehicles"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seeOwnedVehiclesButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/mint_green"
        android:onClick="seeOwnedVehicles"
        android:text="@string/see_your_vehicles"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@+id/seeVehiclesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seeYourBookingsButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="110dp"
        android:backgroundTint="@color/mint_green"
        android:onClick="seeBookedVehicles"
        android:text="@string/see_your_bookings"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seeOwnedVehiclesButton" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person" />

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="600dp"
        android:layout_height="500dp"
        android:layout_marginBottom="440dp"
        android:background="@drawable/user_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="110dp"
            android:text="Hello,"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="110dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="#FFFBFE"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seeYourBookingsButton">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="#B2C1BE"
            android:onClick="signOut"
            android:text="     Log Out"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoutImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logout" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>